--- a/landing page/style.css
+++ b/landing page/style.css
@@ -1,3 +1,37 @@
-#navbar {
+* {
+    font-family: 'Roboto', sans-serif;
     background-color: #1F2937;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+.navbar {
+    background-color: #1F2937;
+    color: white;
+    padding-left: 20px;
+    font-size: medium;
+
+    font-weight: bold;
+}
+
+a:link {
+    color: white;
+    text-decoration: none;
+    float: right;
+    font-size: small;
+}
+
+a:visited {
+    color: white;
+}
+
+#open-statement {
+    color: white;
+    margin-right: 200px;
+}
+
+#image {
+    width: 400px;
+    display: flex;
+    align-items: flex-end;
 }
